--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
     <!-- <script type="module" src="./callback.js"></script> -->
     <!-- <script type="module" src="./closure.js"></script> -->
     <!-- <script type="module" src="./tasks-group 42.js"></script> -->
+    <!-- <script type="module" src="./100+tasks.js"></script> -->
     <!-- <script type="module" src="./prototype.js"></script> -->
     <!-- <script type="module" src="./constructor-new.js"></script> -->
     <script type="module" src="./toFeature-counter.js"></script>
+    //сам находит и привязывает элементы, которые ему нужны
     <!-- <script type="module" src="."></script> -->
     <!-- <script type="module" src="."></script> -->
     <!-- <script type="module" src="."></script> -->
     <!-- <script type="module" src="."></script> -->
-    <!-- <script type="module" src="./100+tasks.js"></script> -->
   </body>
 </html>
