--- a/index.html
+++ b/index.html
@@ -17,16 +17,28 @@
       <span data-value>0</span>
       <button data-decrement>уменьшить</button>
     </div>
-
+    <div>
+      <ul>
+        <li>
+          <a href="./html-pages/DOM-kitty.html"></a>
+        </li>
+        <li>
+          <a href="./html-pages/DOM-start.html"></a>
+        </li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
     <!-- <script type="module" src="./callback.js"></script> -->
     <!-- <script type="module" src="./closure.js"></script> -->
     <!-- <script type="module" src="./tasks-group 42.js"></script> -->
     <!-- <script type="module" src="./100+tasks.js"></script> -->
     <!-- <script type="module" src="./prototype.js"></script> -->
-    <script type="module" src="./constructor-new.js"></script>
+    <!-- <script type="module" src="./constructor-new.js"></script> -->
     <!-- <script type="module" src="./toFeature-counter.js"></script> -->
     //сам находит и привязывает элементы, которые ему нужны
-    <!-- <script type="module" src="."></script> -->
+    <script type="module" src="./start-DOM.js"></script>
     <!-- <script type="module" src="."></script> -->
     <!-- <script type="module" src="."></script> -->
     <!-- <script type="module" src="."></script> -->
