--- a/index.html
+++ b/index.html
@@ -7,40 +7,32 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="counter-1">
-      <button data-increment>увеличить</button>
-      <span data-value>0</span>
-      <button data-decrement>уменьшить</button>
-    </div>
-    <div id="counter-2">
-      <button data-increment>увеличить</button>
-      <span data-value>0</span>
-      <button data-decrement>уменьшить</button>
-    </div>
     <div>
       <ul>
         <li>
-          <a href="./html-pages/DOM-kitty.html"></a>
+          <a href="./html-pages/DOM-kitty.html">#6 DOM-kitty</a>
         </li>
         <li>
-          <a href="./html-pages/DOM-start.html"></a>
+          <a href="./html-pages/styles-classes.html">
+            #6 Стили, классы ClassList</a
+          >
         </li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>
+          <a href="./html-pages/dom-navigation.html"> #6 навигация по DOM </a>
+        </li>
+        <li>
+          <a href="">#6 </a>
+        </li>
+        <li>
+          <a href="./html-pages/6-Counter-example.html">#6 Counter example</a>
+        </li>
       </ul>
     </div>
     <!-- <script type="module" src="./callback.js"></script> -->
     <!-- <script type="module" src="./closure.js"></script> -->
-    <!-- <script type="module" src="./tasks-group 42.js"></script> -->
     <!-- <script type="module" src="./100+tasks.js"></script> -->
     <!-- <script type="module" src="./prototype.js"></script> -->
     <!-- <script type="module" src="./constructor-new.js"></script> -->
-    <!-- <script type="module" src="./toFeature-counter.js"></script> -->
-    //сам находит и привязывает элементы, которые ему нужны
-    <script type="module" src="./start-DOM.js"></script>
-    <!-- <script type="module" src="."></script> -->
-    <!-- <script type="module" src="."></script> -->
-    <!-- <script type="module" src="."></script> -->
+    <script type="module" src="./toFeature-counter.js"></script>
   </body>
 </html>
