create elements from array

--- a/index.html
+++ b/index.html
@@ -26,6 +26,58 @@
         <li>
           <a href="./html-pages/6-Counter-example.html">#6 Counter example</a>
         </li>
+        <li>
+          <a href="./html-pages/6-create-elements.html"
+            >#6 оздание элементов
+          </a>
+        </li>
+        <li>
+          <a href="./html-pages/6-create-array.html"
+            >#6 создание коллекции из массива
+          </a>
+        </li>
+        <li>
+          <a href="">#6 </a>
+        </li>
+        <li>
+          <a href="">#6 </a>
+        </li>
+        <li>
+          <a href="">#6 </a>
+        </li>
+        <li>
+          <a href="">#6 </a>
+        </li>
+        <li>
+          <a href="">#6 </a>
+        </li>
+        <li>
+          <a href="">#6 </a>
+        </li>
+        <li>
+          <a href="">#6 </a>
+        </li>
+        <li>
+          <a href="">#6 </a>
+        </li>
+        <li>
+          <a href="">#6 </a>
+        </li>
+        <li>
+          <a href="">#6 </a>
+        </li>
+        <li>
+          <a href="">#6 </a>
+        </li>
+        <li>
+          <a href="">#6 </a>
+        </li>
+        <li>
+          <a href="">#6 </a>
+        </li>
+        <li>
+          <a href="">#6 </a>
+        </li>
       </ul>
     </div>
     <!-- <script type="module" src="./callback.js"></script> -->
