--- a/index.html
+++ b/index.html
@@ -13,31 +13,33 @@
           <a href="./html-pages/DOM-kitty.html">#6 DOM-kitty</a>
         </li>
         <li>
-          <a href="./html-pages/styles-classes.html">
-            #6 Стили, классы ClassList</a
+          <a href="./html-pages/styles-classes.html"
+            >#6 Стили, классы, свойства элементов ClassList</a
           >
         </li>
         <li>
-          <a href="./html-pages/dom-navigation.html"> #6 навигация по DOM </a>
-        </li>
-        <li>
-          <a href="">#6 </a>
-        </li>
-        <li>
-          <a href="./html-pages/6-Counter-example.html">#6 Counter example</a>
+          <a href="./html-pages/dom-navigation.html"
+            >#6 навигация по DOM дереву</a
+          >
         </li>
         <li>
           <a href="./html-pages/6-create-elements.html"
-            >#6 оздание элементов
-          </a>
+            >#6 Создание элементов</a
+          >
         </li>
         <li>
           <a href="./html-pages/6-create-array.html"
-            >#6 создание коллекции из массива
-          </a>
+            >#6 Создание коллекции элементов из массива данных</a
+          >
         </li>
         <li>
-          <a href="">#6 </a>
+          <a href="./html-pages/6-collection-products.html">#6 Создание коллекции товаров</a>
+        </li>
+        <li>
+          <a href="./html-pages/6-pars.html">#6 Парс строк</a>
+        </li>
+        <li>
+          <a href="./html-pages/6-Counter-example.html">#6 Counter example</a>
         </li>
         <li>
           <a href="">#6 </a>
