add elem is finish

--- a/html-pages/6-pars.html
+++ b/html-pages/6-pars.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <p><a href="../index.html">на главную</a></p>
-    <h1 class="title">Это заголовок</h1>
+    <h1 class="title">Это <span>заголовок</span></h1>
 
     <script type="module" src="../js-pages/6-pars.js"></script>
   </body>
