--- a/index.html
+++ b/index.html
@@ -33,16 +33,18 @@
           >
         </li>
         <li>
-          <a href="./html-pages/6-collection-products.html">#6 Создание коллекции товаров</a>
+          <a href="./html-pages/6-collection-products.html"
+            >#6 Создание коллекции товаров</a
+          >
         </li>
         <li>
           <a href="./html-pages/6-pars.html">#6 Парс строк</a>
         </li>
         <li>
-          <a href="./html-pages/6-Counter-example.html">#6 Counter example</a>
+          <a href="./html-pages/6-transaction.html">#6 Cоздание транзакций</a>
         </li>
         <li>
-          <a href="">#6 </a>
+          <a href="./html-pages/6-Counter-example.html">#6 Counter example</a>
         </li>
         <li>
           <a href="">#6 </a>
